--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,25 @@
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
+  <repositories>
+    <repository>
+        <id>local-maven-repo</id>
+        <url>file:///${project.basedir}/lib/local-maven-repo</url>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>umu.tds</groupId>
+      <artifactId>ProyectoComponenteFotos</artifactId>
+      <version>0.1</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 
