--- a/pom.xml
+++ b/pom.xml
@@ -32,12 +32,12 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
+    <!--dependency>
       <groupId>umu.tds</groupId>
       <artifactId>ProyectoComponenteFotos</artifactId>
       <version>0.1</version>
       <scope>compile</scope>
-    </dependency>
+    </dependency>-->
   </dependencies>
 
   <build>
