--- a/.classpath
+++ b/.classpath
@@ -29,6 +29,6 @@
 	<classpathentry kind="lib" path="lib/h2-1.3.160.jar"/>
 	<classpathentry kind="lib" path="lib/javax.persistence-api-2.2.jar"/>
 	<classpathentry kind="lib" path="lib/Luz.jar"/>
-	<classpathentry kind="lib" path="C:/Users/oliat/Desktop/Universidad/3º/TDS/workspace/PhotoTDS/lib/local_maven_repo/umu/tds/ProyectoComponenteFotos/0.1/ProyectoComponenteFotos-0.1.jar"/>
+	<classpathentry kind="lib" path="lib/local_maven_repo/umu/tds/ProyectoComponenteFotos/0.1/ProyectoComponenteFotos-0.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
