--- a/.classpath
+++ b/.classpath
@@ -31,10 +31,10 @@
 	<classpathentry kind="lib" path="lib/Luz.jar"/>
 	<classpathentry kind="lib" path="lib/local_maven_repo/umu/tds/ProyectoComponenteFotos/0.1/ProyectoComponenteFotos-0.1.jar"/>
 	<classpathentry kind="lib" path="lib/poi-3.17.jar"/>
-	<classpathentry kind="lib" path="C:/Users/oliat/Desktop/Universidad/3º/TDS/workspace/PhotoTDS/lib/iText7/layout-7.1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/oliat/Desktop/Universidad/3º/TDS/workspace/PhotoTDS/lib/iText7/kernel-7.1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/oliat/Desktop/Universidad/3º/TDS/workspace/PhotoTDS/lib/iText7/io-7.1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/oliat/Desktop/Universidad/3º/TDS/workspace/PhotoTDS/lib/iText7/slf4j-api-1.7.25.jar"/>
-	<classpathentry kind="lib" path="C:/Users/oliat/Desktop/Universidad/3º/TDS/workspace/PhotoTDS/lib/iText7/slf4j-simple-1.7.25.jar"/>
+	<classpathentry kind="lib" path="lib/iText7/io-7.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/iText7/kernel-7.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/iText7/layout-7.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/iText7/slf4j-api-1.7.25.jar"/>
+	<classpathentry kind="lib" path="lib/iText7/slf4j-simple-1.7.25.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
